--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -584,6 +584,60 @@ async function loadTasksForDate(selectedDate) {
         taskDiv.dataset.taskDate = task.date;
 
         let currentTurn;
+
+// Handle Daily tasks with multiple times per day
+if (task.repeat === "Daily" && repeatLimit > 1) {
+    const dateRange = task.date.split(" to ");
+    const startDateStr = dateRange[0];
+    const startDate = parseLocalDate(startDateStr);
+    const currentDate = parseLocalDate(selectedDate);
+    const userOrder = [...task.users];
+
+    const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+    const defaultIndex = diffDays % userOrder.length;
+    const assumedTurn = userOrder[defaultIndex];
+
+    // Special: Check yesterday’s completion
+    const yesterday = new Date(currentDate);
+    yesterday.setDate(yesterday.getDate() - 1);
+    const yesterdayStr = yesterday.toISOString().split("T")[0];
+    const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+
+    const yesterdayTurnIndex = (diffDays - 1) % userOrder.length;
+    const yesterdayTurn = userOrder[yesterdayTurnIndex];
+
+    const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === yesterdayTurn).length;
+
+    // If viewing a past date — don't use saved turn
+    const now = new Date().toISOString().split("T")[0];
+    const isPastDate = selectedDate < now;
+
+    if (isPastDate) {
+        // Determine turn on that specific day
+        const thatDayCompletions = task.completions?.[selectedDate] || [];
+        const counts = {};
+        thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+
+        for (let i = 0; i < userOrder.length; i++) {
+            if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                currentTurn = userOrder[i];
+                break;
+            }
+        }
+
+        if (!currentTurn) currentTurn = userOrder[0]; // fallback
+    } else {
+        if (yesterdayCompletedCount < repeatLimit) {
+            currentTurn = yesterdayTurn;
+        } else {
+            currentTurn = assumedTurn;
+        }
+    }
+
+} else {
+    currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
+}
+
         if (task.repeat === "Daily" && task.timesPerDay === 1) {
     const dateRange = task.date.split(" to ");
     const startDateStr = dateRange[0];
