Current Turn Task adaption #32

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -547,6 +547,8 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+
+
 async function loadTasksForDate(selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     if (!adminEmail) return;
@@ -583,79 +585,56 @@ async function loadTasksForDate(selectedDate) {
         taskDiv.dataset.taskTitle = task.title;
         taskDiv.dataset.taskDate = task.date;
 
-        let currentTurn;
-
-// Handle Daily tasks with multiple times per day
-if (task.repeat === "Daily" && repeatLimit > 1) {
-    const dateRange = task.date.split(" to ");
-    const startDateStr = dateRange[0];
-    const startDate = parseLocalDate(startDateStr);
-    const currentDate = parseLocalDate(selectedDate);
-    const userOrder = [...task.users];
-
-    const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-    const defaultIndex = diffDays % userOrder.length;
-    const assumedTurn = userOrder[defaultIndex];
-
-    // Special: Check yesterday’s completion
-    const yesterday = new Date(currentDate);
-    yesterday.setDate(yesterday.getDate() - 1);
-    const yesterdayStr = yesterday.toISOString().split("T")[0];
-    const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
-
-    const yesterdayTurnIndex = (diffDays - 1) % userOrder.length;
-    const yesterdayTurn = userOrder[yesterdayTurnIndex];
-
-    const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === yesterdayTurn).length;
-
-    // If viewing a past date — don't use saved turn
-    const now = new Date().toISOString().split("T")[0];
-    const isPastDate = selectedDate < now;
-
-    if (isPastDate) {
-        // Determine turn on that specific day
-        const thatDayCompletions = task.completions?.[selectedDate] || [];
-        const counts = {};
-        thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
-
-        for (let i = 0; i < userOrder.length; i++) {
-            if ((counts[userOrder[i]] || 0) < repeatLimit) {
-                currentTurn = userOrder[i];
-                break;
-            }
-        }
-
-        if (!currentTurn) currentTurn = userOrder[0]; // fallback
-    } else {
-        if (yesterdayCompletedCount < repeatLimit) {
-            currentTurn = yesterdayTurn;
-        } else {
-            currentTurn = assumedTurn;
-        }
-    }
-
-} else {
-    currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
-}
-
-        if (task.repeat === "Daily" && task.timesPerDay === 1) {
-    const dateRange = task.date.split(" to ");
-    const startDateStr = dateRange[0];
-    const startDate = parseLocalDate(startDateStr);
-    const currentDate = parseLocalDate(selectedDate);
-    const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-    const userOrder = [...task.users];
-    const currentIndex = diffDays % userOrder.length;
-    currentTurn = userOrder[currentIndex];
-        } else {
-            currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
-        }
-
+        // ✅ Define repeatLimit FIRST
         let repeatLimit = 1;
         if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
         if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
         if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
+        let currentTurn;
+        const dateRange = task.date.split(" to ");
+        const startDate = parseLocalDate(dateRange[0]);
+        const currentDate = parseLocalDate(selectedDate);
+        const userOrder = [...task.users];
+
+        const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+        const defaultIndex = diffDays % userOrder.length;
+        const assumedTurn = userOrder[defaultIndex];
+
+        const yesterday = new Date(currentDate);
+        yesterday.setDate(yesterday.getDate() - 1);
+        const yesterdayStr = yesterday.toISOString().split("T")[0];
+        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+
+        const yesterdayTurnIndex = (diffDays - 1) % userOrder.length;
+        const yesterdayTurn = userOrder[yesterdayTurnIndex];
+        const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === yesterdayTurn).length;
+
+        const now = new Date().toISOString().split("T")[0];
+        const isPastDate = selectedDate < now;
+
+        if (isPastDate) {
+            const thatDayCompletions = task.completions?.[selectedDate] || [];
+            const counts = {};
+            thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+
+            for (let i = 0; i < userOrder.length; i++) {
+                if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                    currentTurn = userOrder[i];
+                    break;
+                }
+            }
+
+            if (!currentTurn) currentTurn = userOrder[0]; // fallback
+        } else {
+            if (yesterdayCompletedCount < repeatLimit) {
+                currentTurn = yesterdayTurn;
+            } else {
+                currentTurn = assumedTurn;
+            }
+        }
+
+        // ✅ Completions & display
         const today = selectedDate;
         const completedUsers = Array.isArray(task.completions?.[today]) ? task.completions[today] : [];
         const completedCount = completedUsers.length;
@@ -669,6 +648,7 @@ if (task.repeat === "Daily" && repeatLimit > 1) {
             <button class="delete-btn">Delete</button>
         `;
 
+        // Task interaction logic
         taskDiv.addEventListener("click", (e) => {
             if (!taskDiv.classList.contains("swiped-left") && e.target !== taskDiv.querySelector(".delete-btn")) {
                 showTaskDetails(task);
@@ -695,9 +675,7 @@ if (task.repeat === "Daily" && repeatLimit > 1) {
             }
         });
 
-        taskDiv.addEventListener("touchend", () => {
-            isSwiping = false;
-        });
+        taskDiv.addEventListener("touchend", () => { isSwiping = false; });
 
         taskDiv.addEventListener("mousedown", (e) => {
             startX = e.clientX;
@@ -715,13 +693,8 @@ if (task.repeat === "Daily" && repeatLimit > 1) {
             }
         });
 
-        taskDiv.addEventListener("mouseup", () => {
-            isSwiping = false;
-        });
-
-        taskDiv.addEventListener("mouseleave", () => {
-            isSwiping = false;
-        });
+        taskDiv.addEventListener("mouseup", () => { isSwiping = false; });
+        taskDiv.addEventListener("mouseleave", () => { isSwiping = false; });
 
         taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
             if (confirm(`Are you sure you want to delete "${task.title}"?`)) {
@@ -752,6 +725,13 @@ if (task.repeat === "Daily" && repeatLimit > 1) {
         taskList.appendChild(taskDiv);
     });
 }
+
+
+
+
+
+
+
 
 
 
