--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -840,80 +840,77 @@ async function showTaskDetails(task) {
     const selectedDate = document.querySelector(".day.selected")?.dataset.date;
     if (!selectedDate) return;
 
-    // Parse dates for comparison
     function parseLocalDate(dateStr) {
         const [year, month, day] = dateStr.split("-").map(Number);
         return new Date(year, month - 1, day);
     }
 
-
-    function getPreviousDate(dateStr) {
-    const d = new Date(dateStr);
-    d.setDate(d.getDate() - 1);
-    return d.toISOString().split("T")[0];
-}
-
-
-
-    // Get the start date of the task (use task.date's "from" date if it's a range)
     const dateRange = task.date.split(" to ");
-    const startDateStr = dateRange[0];
-    const startDate = parseLocalDate(startDateStr);
-
-    // Calculate the current turn based on the selected date
+    const startDate = parseLocalDate(dateRange[0]);
     const currentDate = parseLocalDate(selectedDate);
     const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
     const userOrder = [...task.users];
 
-    // For a "Daily" task with 1 time per day, rotate the turn based on the day difference
-    let currentIndex;
-    if (task.repeat === "Daily" && task.timesPerDay === 1) {
-        currentIndex = diffDays % userOrder.length;
+    // ✅ Determine repeatLimit just like in loadTasksForDate
+    let repeatLimit = 1;
+    if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+
+    const defaultIndex = diffDays % userOrder.length;
+    const assumedTurn = userOrder[defaultIndex];
+
+    const yesterday = new Date(currentDate);
+    yesterday.setDate(yesterday.getDate() - 1);
+    const yesterdayStr = yesterday.toISOString().split("T")[0];
+    const yesterdayTurnIndex = (diffDays - 1) % userOrder.length;
+    const yesterdayTurn = userOrder[yesterdayTurnIndex];
+    const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+    const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === yesterdayTurn).length;
+
+    const todayStr = new Date().toISOString().split("T")[0];
+    const isPastDate = selectedDate < todayStr;
+
+    let currentTurn;
+
+    if (isPastDate) {
+        const thatDayCompletions = task.completions?.[selectedDate] || [];
+        const counts = {};
+        thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+        for (let i = 0; i < userOrder.length; i++) {
+            if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                currentTurn = userOrder[i];
+                break;
+            }
+        }
+        if (!currentTurn) currentTurn = userOrder[0];
     } else {
-        // Fallback to the stored turn if the task isn't a daily 1-time-per-day task
-        const storedTurn = task.turn || task.users[0];
-        currentIndex = userOrder.indexOf(storedTurn);
+        currentTurn = (yesterdayCompletedCount < repeatLimit) ? yesterdayTurn : assumedTurn;
     }
 
-    const currentUser = userOrder[currentIndex];
+    const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+    const completedCount = completedUsers.length;
 
-    // Calculate the next user in the turn order
-    const nextIndex = (currentIndex + 1) % userOrder.length;
+    const nextIndex = (userOrder.indexOf(currentTurn) + 1) % userOrder.length;
     const nextUser = userOrder[nextIndex];
 
-    // Get completions for the selected date
-    const completedRaw = task.completions?.[selectedDate] || [];
-    const completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
-
-    // Determine required times for the task
-    let requiredTimes = 1;
-    if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
-    if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
-    if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
-
-    // Build the task details HTML
     let taskDetails = "";
     if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
     if (task.notes) taskDetails += `<strong>Notes:</strong> ${task.notes}<br>`;
     if (task.room) taskDetails += `<strong>Room:</strong> ${task.room}<br>`;
     if (task.repeat) {
         taskDetails += `<strong>Frequency:</strong> ${task.repeat}`;
-        if (task.repeat === "Daily" && task.timesPerDay)
-            taskDetails += ` - ${task.timesPerDay} time(s) per day`;
-        if (task.repeat === "Weekly" && task.timesPerWeek)
-            taskDetails += ` - ${task.timesPerWeek} time(s) per week`;
-        if (task.repeat === "Monthly" && task.timesPerMonth)
-            taskDetails += ` - ${task.timesPerMonth} time(s) per month`;
+        if (task.repeat === "Daily" && task.timesPerDay) taskDetails += ` - ${task.timesPerDay} time(s)/day`;
+        if (task.repeat === "Weekly" && task.timesPerWeek) taskDetails += ` - ${task.timesPerWeek} time(s)/week`;
+        if (task.repeat === "Monthly" && task.timesPerMonth) taskDetails += ` - ${task.timesPerMonth} time(s)/month`;
         taskDetails += "<br>";
     }
-    if (task.settings) taskDetails += `<strong>Settings:</strong> ${task.settings}<br>`;
     if (task.date) taskDetails += `<strong>Date:</strong> ${task.date}<br>`;
-    if (task.reminder) taskDetails += `<strong>Reminder:</strong> Yes<br>`;
     if (task.users?.length) taskDetails += `<strong>Users:</strong> ${task.users.join(", ")}<br>`;
     if (task.reward && task.reward !== "0") taskDetails += `<strong>Reward:</strong> ${task.reward} 🍯<br>`;
-
-    taskDetails += `<strong>Current Turn:</strong> ${currentUser}<br>`;
+    taskDetails += `<strong>Current Turn:</strong> ${currentTurn}<br>`;
     taskDetails += `<strong>Next:</strong> ${nextUser}<br>`;
+    taskDetails += `<strong>Completed:</strong> ${completedCount}/${repeatLimit}<br>`;
 
     if (completedUsers.length > 0) {
         taskDetails += `
@@ -932,17 +929,11 @@ async function showTaskDetails(task) {
 
     const modal = document.createElement("div");
     modal.className = "task-modal";
-    modal.innerHTML = `
-        <div class="modal-content">
-            ${taskDetails}
-        </div>
-    `;
+    modal.innerHTML = `<div class="modal-content">${taskDetails}</div>`;
     document.body.appendChild(modal);
 
     modal.addEventListener("click", (e) => {
-        if (e.target.classList.contains("task-modal")) {
-            modal.remove();
-        }
+        if (e.target.classList.contains("task-modal")) modal.remove();
     });
 
     document.getElementById("editTurnBtn").addEventListener("click", () => {
@@ -965,7 +956,6 @@ async function showTaskDetails(task) {
         });
     }
 }
-
 
 
 
